--- a/src/main/resources/Localization_en.properties
+++ b/src/main/resources/Localization_en.properties
@@ -1,2 +1,7 @@
-jazyk=english
-dve\ slova=two words
+menu.vysledky=RESULTS
+menu.autor=AUTHOR
+menu.nastavenia=SETTINGS
+menu.info=INFO
+homepage.input=Enter new url or choose from examples below
+homepage.input.info=Place to input url adress.
+homepage.back=Back to home page
