--- a/src/main/resources/Localization_sk.properties
+++ b/src/main/resources/Localization_sk.properties
@@ -1,2 +1,7 @@
-jazyk=slovensk\u00fd
-dve\ slova=dve slova
+menu.vysledky=V\u00ddSLEDKY
+menu.autor=O AUTOROVI
+menu.nastavenia=NASTAVENIA
+menu.info=INFORM\u00c1CIE
+homepage.input=Zadaj vlastn\u00fa url adresu alebo vyber vzorov\u00fa
+homepage.input.info=Miesto pre vlo\u017eenie url adresy.
+homepage.back=Sp\u00e4\u0165 na domovsk\u00fa str\u00e1nku
