--- a/src/main/resources/Localization_sk.properties
+++ b/src/main/resources/Localization_sk.properties
@@ -5,3 +5,48 @@ menu.info=INFORM\u00c1CIE
 homepage.input=Zadaj vlastn\u00fa url adresu alebo vyber vzorov\u00fa
 homepage.input.info=Miesto pre vlo\u017eenie url adresy.
 homepage.back=Sp\u00e4\u0165 na domovsk\u00fa str\u00e1nku
+homepage.run=Stiahne a analyzuje webstr\u00e1nku.
+author.is=Profil na IS
+author.linkedin=Profil na LinkedIn
+author.email=Nap\u00ed\u0161 email
+info.description.header=Popis aplik\u00e1cie
+info.description1=Aplik\u00e1cia na automatick\u00e9 extrahovanie inform\u00e1ci\u00ed z internetov\u00fdch \u010dl\u00e1nkov
+info.description2=Aplik\u00e1cia sl\u00fa\u017ei na automatick\u00fa detekciu obsahu internetov\u00fdch \u010dl\u00e1nkov. Po zadan\u00ed url postupne prejde ur\u010den\u00fd po\u010det \u010dl\u00e1nkov (mo\u017enos\u0165 nastavi\u0165 v nastaveniach), a extrahuje z nich nadpis, autora, d\u00e1tum a text \u010dl\u00e1nku. V\u00fdstupom je ZIP s\u00fabor, v ktorom s\u00fa XML s\u00fabory vytvoren\u00e9 na z\u00e1klade mena autora a k nemu priraden\u00e9 jeho \u010dl\u00e1nky.
+info.instruction.header=N\u00e1vod ako pou\u017e\u00edva\u0165 aplik\u00e1ciu
+info.instruction.run=Spustenie aplik\u00e1cie
+info.instruction.settings=Nastavenia
+info.instruction.output=V\u00fdsledky
+info.instruction.run2=aplik\u00e1cia automaticky stiahne a analyzuje str\u00e1nky vr\u00e1mci dom\u00e9ny zadanej v poli URL. N\u00e1sledne analyzuje d\u00e1ta, a v\u00fdsledok vyp\u00ed\u0161e do tabu\u013eky. V\u00fdsledn\u00e9 d\u00e1ta je mo\u017en\u00e9 stiahnu\u0165 jednotlivo alebo ako zip s\u00fabor.
+info.instruction.settings2=nastavenie po\u010dtu stiahnut\u00fdch \u010dl\u00e1nkov, doby \u010dakania medzi stiahnut\u00edm viacer\u00fdch \u010dl\u00e1nkov a in\u00fdch parametrov. 
+info.instruction.output2=podstr\u00e1nka obsahuje uk\u00e1\u017ekov\u00e9 d\u00e1ta, ktor\u00e9 je mo\u017eno online prezera\u0165, pr\u00edpadne stiahnu\u0165 ako zip s\u00fabor.
+preview.info=Aplik\u00e1cia bola otestovan\u00e1 na 20 \u010cesk\u00fdch a Slovensk\u00fdch dom\u00e9nach, z ktor\u00fdch sa n\u00e1hodne vybralo 500 \u010d\u00e1nkov. Priemern\u00e1 \u00faspe\u0161nos\u0165 n\u00e1\u0161ho algoritmu je 90,68%. Vybudovali sme korpus ur\u010den\u00fd na \u0161t\u00fdlometrick\u00fd v\u00fdskum. Vybudovan\u00fd korpus obsahuje okrem samotn\u00e9ho \u010dl\u00e1nku aj doplnkov\u00e9 inform\u00e1cie: meno autora, nadpis a d\u00e1tum vyvorenia.     
+preview.graph=Autorsk\u00fd korpus vybudovan\u00fd z 20 dom\u00e9n
+preview.download=Aplik\u00e1ciu si m\u00f4\u017eete stiahnu\u0165 - 
+preview.download2=Autorsk\u00fd korpus si m\u00f4\u017eete stiahnu\u0165 - 
+preview.manager=Spr\u00e1vca s\u00faborov
+preview.file=N\u00e1h\u013ead vybran\u00e9ho XML s\u00faboru
+output=V\u00fdstup
+output.info=(zoznam \u010dl\u00e1nkov spolu s extrahovan\u00fdmi d\u00e1tami)
+output.original=P\u00f4vodn\u00fd \u010dl\u00e1nok
+output.extracted=Extrahovan\u00e9 d\u00e1ta
+output.xml=V st\u013apci extrahovan\u00e9 d\u00e1ta je mo\u017en\u00e9 si stiahnut jednotliv\u00e9 xml s\u00fabory, ktor\u00e9 obsahuj\u00fa extrahovan\u00e9 d\u00e1ta z dan\u00e9ho \u010dl\u00e1nku.
+output.download=S\u00fabor so v\u0161etk\u00fdmi d\u00e1tami si m\u00f4\u017eete stiahnu\u0165:
+settings.heading=Nastavenia - popis jednotliv\u00fdch nastaven\u00ed:
+settings.number=Po\u010det str\u00e1nok
+settings.wait=Doba \u010dakania (politeness)
+settings.url=Vlastn\u00e9 URL
+settings.thresh=Prahov\u00e1 hodnota
+settings.depth=H\u013abka zanorenia crawleru
+settings.number2=nastavenie po\u010dtu stiahnut\u00fdch \u010dl\u00e1nkov.
+settings.wait2=nastavenie doby \u010dakania medzi stiahnut\u00edm viacer\u00fdch str\u00e1nok v milisekund\u00e1ch.
+settings.url2=nastavenie filtra URL adresy, pomocou ktor\u00e9ho bude filtrova\u0165 s\u0165ahovan\u00e9 str\u00e1nky.
+settings.thresh2=nastavenie v\u00e1hy prahovej hodnoty pre \u010distenie str\u00e1nky od boilerplate pomocou SST.
+settings.depth2=cel\u00e9 \u010d\u00edslo od 1 do N symbolizuje h\u013abku zanorenia crawleru vr\u00e1mci URL adresy. Napr.: na str\u00e1nke "kultura.sme.sk/clanok1" je h\u013abka zanorenia 1 \u010das\u0165 URL adresy "sme.sk". H\u013abka zanorenia -1 znamen\u00e1, \u017ee sa p\u00f4jde do maxim\u00e1lnej h\u013abky URL.
+settings.url.on=Zapn\u00fa\u0165 pou\u017e\u00edvanie vlastn\u00e9ho URL.
+settings.url.on1=Zapn\u00fa\u0165
+settings.save=Ulo\u017ei\u0165 nastavenia
+settings.number3=Po\u010det str\u00e1nok na stiahnutie [cel\u00e9 \u010d\u00edslo].
+settings.wait3=Doba \u010dakania medzi stiahnut\u00edm viacer\u00fdch str\u00e1nok [milisekundy].
+settings.url3=Filter URL adresy [URL adresa].
+settings.thresh3=Prahov\u00e1 hodnota pre SST [desatinn\u00e9 \u010d\u00edslo medzi 0 a\u017e 1].
+settings.depth3=H\u013abka zanorenia crawleru [cel\u00e9 \u010d\u00edslo].
